front-bugfix Buttons are now aligned properly on profile interface

--- a/front/src/components/Footer/style.scss
+++ b/front/src/components/Footer/style.scss
@@ -1,9 +1,7 @@
-@media (min-width:720px){
 .footer
 {
-  padding-top: 1rem;
+  padding-top: 5rem;
   padding-bottom: 1rem;
-  max-height: 120px;
   background-color: transparent;
   width: 100%;
   text-align: center; 
@@ -26,37 +24,3 @@ padding: 8px;
 {
   margin: 3px;
 };
-};
-
-@media (max-width:719px){
-
-  .footer
-{
-  padding-top: 30rem;
-  padding-bottom: 1rem;
-  max-height: 120px;
-  background-color: transparent;
-  width: 100%;
-  text-align: center; 
-  background-color: transparent;
-  color: white;
-}
-
-.footerfollow
-{
-  padding-bottom: 10px;
-  margin-right: 25%;
-  margin-left: 25%;
-}
-
-.copyright
-{
-padding: 8px;
-}
-
-.fab
-{
-  margin: 3px;
-};
-
-}
